--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,11 @@
 		<true/>
 		<key>UIStatusBarHidden</key>
 		<false/>
+		<key>NSCameraUsageDescription</key>
+		<string>To take images</string>
+		<key>NSPhotoLibraryUsageDescription</key>
+        <string>To choose images</string>
+        <key>NSMicrophoneUsageDescription</key>
+        <string>Used to capture audio for image picker plugin</string>
 	</dict>
 </plist>
