--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image_picker: '^1.0.4'
   email_validator: '^2.1.16'
   flutter_launcher_icons: '^0.13.1'
   flutter_native_splash: '^2.2.4'
