--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   email_validator: '^2.1.16'
   flutter_launcher_icons: '^0.13.1'
   flutter_native_splash: '^2.2.4'
+  shared_preferences: '^2.0.6'
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
